<resources>
    <string name="app_name">RwandaTour</string>
    <string name="testimonials">testimonials</string>
    <string name="about_tourism">about tourism</string>
    <string name="rwanda_tour_guide">rwanda tour guide</string>
    <string name="shopping">shopping</string>
    <string name="transport">transport</string>
    <string name="sports">sports</string>
    <string name="attractions">attractions</string>
    <string name="hotels">hotels</string>
    <string name="favorites">favorites</string>
    <string name="food_and_drink">food and drink</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="social_media">social media</string>
    <string name="instagram">instagram</string>
    <string name="lake_kivu">lake kivu</string>
    <string name="located_in_wester_provence">located in wester provence</string>
    <string name="virunga_park">Virunga Park</string>
    <string name="about">about</string>
    <string name="rate">Rate</string>
    <string name="info">Info</string>
    <string name="one_of_largest_volcano_park">one of largest volcano park</string>
    <string name="located_in_northern_provence">Located in northern provence</string>
    <string name="_114km_from_kigali">114km from Kigali</string>
    <string name="https_virunga_org">https://virunga.org/</string>
    <string name="_243_991_715_401">+243 991 715 401</string>
    <string name="akagera_park">akagera Park</string>
    <string name="largest_national_park">largest national park</string>
    <string name="located_in_eastern">located in eastern</string>
    <string name="_111km_from_kigali">111km from kigali</string>
    <string name="https_www_akageranationalpark_org">https://www.akageranationalpark.org/</string>
    <string name="_250782166015">+250782166015</string>
    <string name="national_stadium">national stadium</string>
    <string name="located_in_kigali">Located in Kigali</string>
    <string name="_500m_from_city">500m from City</string>
    <string name="http_www_rwandasport_com">http://www.rwandasport.com</string>
    <string name="located_in_kigali_city">located in kigali city</string>
    <string name="amahoro_stadium">amahoro stadium</string>
    <string name="congo_nile_trail">Congo nile Trail</string>
    <string name="_133km_from_kigali">133km from kigali</string>
    <string name="https_www_lonelyplanet_com">https://www.lonelyplanet.com</string>
    <string name="hottest_vacation_destinations">hottest vacation destinations</string>
    <string name="bisoke_mountain_peak">Bisoke Mountain peak</string>
    <string name="largest_crater_lake">largest crater lake</string>
    <string name="_123km_from_kigali">123km from kigali</string>
    <string name="https_www_explorerwandatours_com">https://www.explorerwandatours.com/</string>
    <string name="kigali_convetion_center">Kigali Convetion Center</string>
    <string name="conventional_center">conventional center</string>
    <string name="_3km_from_city">3km from city</string>
    <string name="_252253253">252253253</string>
    <string name="largest_market_in_city">largest market in City</string>
    <string name="https_www_tripadvisor_com">https://www.tripadvisor.com/</string>
    <string name="largest_forest_in_rwanda">largest forest in Rwanda</string>
    <string name="located_in_southwest">located in southWest</string>
    <string name="_219km_from_kigali_city">219km from Kigali city</string>
    <string name="_250780870670">+250780870670</string>
    <string name="nyungwe_national_forest">Nyungwe National Forest</string>
    <string name="largest_lake_in_rwanda">largest Lake in Rwanda</string>
    <string name="located_in_south_and_west">Located in south and west</string>
    <string name="_134km_from_kigali">134km from kigali</string>
    <string name="http_www_lake_kivu_org">http://www.lake-kivu.org/</string>
    <string name="urukari_culture_museum">Urukari Culture museum</string>
    <string name="culture_national_museum">culture national museum</string>
    <string name="located_in_south">located in south</string>
    <string name="http_nyanza_gov_rw">http://nyanza.gov.rw</string>
    <string name="_0730_741_093">0730 741 093</string>
    <string name="king_s_palace_museum">King\'s Palace Museum</string>
    <string name="ibere_rya_bigogwe">Ibere rya Bigogwe</string>
    <string name="a_rock_resembling_a_woman_s_breast">a rock resembling a woman\'s breast</string>
    <string name="_139_from_kigali_city">139 from Kigali city</string>
    <string name="http_rw_geoview_info">http://rw.geoview.info</string>
    <string name="cricket_stadium">Cricket Stadium</string>
    <string name="national_cricket_stadium_in_rwanda">national cricket stadium in Rwanda</string>
    <string name="gahanga_kigali_rwanda">gahanga kigali Rwanda</string>
    <string name="_11_4km_from_kigali_city">11.4km from Kigali city</string>
    <string name="https_www_gahangacricketstadium_org">https://www.gahangacricketstadium.org/</string>
    <string name="_250788214664">+250788214664</string>
    <string name="gisenyi_hotspring">Gisenyi Hotspring</string>
    <string name="https_www_lonelyplanet_com_rwanda">https://www.lonelyplanet.com/rwanda/</string>
    <string name="_164km_from_kigali">164km from kigali</string>
    <string name="located_in_western_provence">located in western provence</string>
    <string name="brancheto_bar">Brancheto Bar</string>
    <string name="_139km_from_kigali_city">139km from kigali city</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm PassWord</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter full Name</string>
    <string name="error_message_email">Enter valid email</string>
    <string name="error_message_age">enter age</string>
    <string name="error_message_password">enter password</string>
    <string name="success_message">Registration successfully</string>
    <string name="text_not_member">No account yet? create one</string>
    <string name="text_already_member">Already member? login</string>
    <string name="error_email_exist">Email already Exist</string>
    <string name="error_password_match">password does not match</string>
    <string name="error_valid_email_password">wrong email or password</string>
    <string name="website">Website</string>
</resources>
