<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:textColor="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:title="@string/favorites"
            android:icon="@drawable/favorite"
            android:id="@+id/favorites">
        </item>
        <item
            android:icon="@drawable/drinks"
            android:title="@string/food_and_drink"
            android:id="@+id/food">
        </item>
        <item
            android:icon="@drawable/hotels"
            android:title="@string/hotels"
            android:id="@+id/hotels">
        </item>
        <item
            android:icon="@drawable/attractions"
            android:title="@string/attractions"
            android:id="@+id/attraction">
        </item>
        <item
            android:icon="@drawable/sports"
            android:title="@string/sports"
            android:id="@+id/sports">
        </item>
        <item
            android:icon="@drawable/cars"
            android:title="@string/transport"
            android:id="@+id/transport">
        </item>
        <item
            android:icon="@drawable/shopping"
            android:title="@string/shopping"
            android:id="@+id/shopping">
        </item>
    </group>
    <item
        android:title="Share"
        android:titleCondensed="#fff">
        <menu>
            <item
                android:icon="@drawable/instagram"
                android:title="@string/instagram"
                android:id="@+id/instagram">
            </item>
            <item
                android:icon="@drawable/facebook"
                android:title="facebook"
                android:id="@+id/facebook">
            </item>
        </menu>

    </item>
</menu>