<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/giraffe"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/registerPage"
            app:title="Register"
            app:titleTextColor="#fff"
            android:background="@color/colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

        <ImageView
            android:src="@drawable/logo"
            android:layout_width="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="150dp" />
        <TextView
            android:text="Rwanda tour Guide"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/email"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/email"
            android:layout_marginBottom="30dp"
            android:hint="@string/hint_email"
            android:textColorHint="#918C8C"
            android:background="@drawable/round_edittext"
            android:textColor="@color/colorAccent"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="19dp"
            android:layout_height="50dp" />
        <EditText
            android:id="@+id/password"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColorHint="#918C8C"
            android:paddingLeft="19dp"
            android:drawableLeft="@drawable/ic_arrow_forward_black_24dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/round_edittext"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <EditText
            android:id="@+id/confirm"
            android:layout_marginLeft="30dp"
            android:drawableLeft="@drawable/ic_arrow_forward_black_24dp"
            android:layout_marginRight="30dp"
            android:textColorHint="#918C8C"
            android:paddingLeft="19dp"
            android:background="@drawable/round_edittext"
            android:inputType="textPassword"
            android:hint="@string/hint_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <Button
            android:id="@+id/registerbtn"
            android:layout_marginTop="30dp"
            android:text="Register"
            android:textColor="#918C8C"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/round_edittext"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/loginlink"
            android:text="@string/text_already_member"
            android:layout_gravity="center_horizontal"
            android:textColor="#fff"
            android:layout_marginTop="25dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>