<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HotspringActivity">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/hotspring_id"
            android:layout_width="match_parent"
            android:gravity="bottom"
            android:layout_height="200dp"
            android:background="@drawable/hotspring"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/hotspring_id"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#fff">

            <TextView
                android:text="@string/gisenyi_hotspring"
                android:padding="20dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="#FF5733"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_title"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="12dp"
                card_view:cardCornerRadius="15dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:textStyle="bold"
                        android:textColor="#6C6B6A"
                        android:fontFamily="sans-serif-medium"
                        android:paddingLeft="20dp"
                        android:text="Description"
                        android:layout_marginBottom="1dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/one_of_largest_volcano_park"
                        android:paddingLeft="20dp"
                        android:drawableLeft="@drawable/mountain"
                        android:drawablePadding="13dp"
                        android:textColor="#6C6B6A"
                        android:fontFamily="sans-serif-medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_location"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="12dp"
                card_view:cardCornerRadius="15dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:textStyle="bold"
                        android:textColor="#6C6B6A"
                        android:fontFamily="sans-serif-medium"
                        android:paddingLeft="20dp"
                        android:text="Location"
                        android:layout_marginBottom="1dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/located_in_western_provence"
                        android:paddingLeft="20dp"
                        android:drawableLeft="@drawable/location"
                        android:textColor="#6C6B6A"
                        android:drawablePadding="3dp"
                        android:fontFamily="sans-serif-medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_killometer"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="12dp"
                card_view:cardCornerRadius="15dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:textStyle="bold"
                        android:textColor="#6C6B6A"
                        android:fontFamily="sans-serif-medium"
                        android:paddingLeft="20dp"
                        android:text="Kilometre from Kigali"
                        android:layout_marginBottom="1dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/_164km_from_kigali"
                        android:paddingLeft="20dp"
                        android:drawableLeft="@drawable/gps"
                        android:textColor="#6C6B6A"
                        android:fontFamily="sans-serif-medium"
                        android:drawablePadding="3dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_link"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="12dp"
                card_view:cardCornerRadius="15dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:textStyle="bold"
                        android:textColor="#6C6B6A"
                        android:fontFamily="sans-serif-medium"
                        android:paddingLeft="20dp"
                        android:text="Website"
                        android:layout_marginBottom="1dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/https_www_lonelyplanet_com_rwanda"
                        android:paddingLeft="20dp"
                        android:drawableLeft="@drawable/link"
                        android:fontFamily="sans-serif-medium"
                        android:drawablePadding="3dp"
                        android:textColor="#6C6B6A"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_phone"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="12dp"
                card_view:cardCornerRadius="15dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:textStyle="bold"
                        android:textColor="#6C6B6A"
                        android:fontFamily="sans-serif-medium"
                        android:paddingLeft="20dp"
                        android:text="Phone"
                        android:layout_marginBottom="1dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/_243_991_715_401"
                        android:paddingLeft="20dp"
                        android:textColor="#6C6B6A"
                        android:drawableLeft="@drawable/phonenumbers"
                        android:drawablePadding="3dp"
                        android:fontFamily="sans-serif-medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>